k8s/11-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      serviceAccountName: ticketing-sa
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests: { cpu: "50m",  memory: "64Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ticketing
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
